tests/errors/003-typechecking/004-incompatible-types/003-incompatible-argument.xxx
y := (a : int) => {}
x := y("string")
